--- a/InterstitialExample/app/src/main/res/values/strings.xml
+++ b/InterstitialExample/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AdTrue Mobile Ad Interstitial Example</string>
+    <string name="app_name">InterstitialExample</string>
+    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="impossible_game">Impossible Game</string>
-    <string name="retry_button_text">Retry</string>
-    <string name="watch_video_button_text">Watch Video for 10 additional coins</string>
-    <string name="default_coin_text">Coins: 0</string>
+
 </resources>
